project(net-calc)
INCLUDE_DIRECTORIES(/usr/include/)
set(CMAKE_REQUIRED_INCLUDES "/usr/local/include" "/usr/include/")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_executable(server server.cpp)
add_executable(client client.cpp)
target_link_libraries(server libmysqlcppconn-dev)
